# eoscdt

./: .gitignore  README.md  release.txt  setup.cfg  setup.py  tag.sh
.github/workflows/: build.yml  release.yml
pysrc/: __init__.py
scripts/: download.py
