[metadata]
long_description = file:README.md
long_description_content_type = text/markdown

[options.entry_points]
console_scripts =
    cdt-cpp = eoscdt:run_cdt_cpp
    cdt-cc = eoscdt:run_cdt_cc
    cdt-pp = eoscdt:run_cdt_pp
    cdt-ld = eoscdt:run_cdt_ld
    cdt-init = eoscdt:run_cdt_init
    eoscdt = eoscdt:run_eos_cdt
    eoscdt-get-dir = eoscdt:run_eos_cdt_get_dir
    eoscdt-get-root-dir = eoscdt:run_eos_cdt_get_root_dir
