[metadata]
long_description = file:README.md
long_description_content_type = text/markdown

[options.entry_points]
console_scripts =
    cdt-cpp = eoscdt:run_cpp
    cdt-cc = eoscdt:run_cc
    cdt-pp = eoscdt:run_pp
    cdt-ld = eoscdt:run_ld
    cdt-init = eoscdt:run_init
    cdt-abidiff = eoscdt:run_abidiff
    cdt-ranlib = eoscdt:run_ranlib
    cdt-ar = eoscdt:run_ar
    cdt-nm = eoscdt:run_nm
    cdt-objcopy = eoscdt:run_objcopy
    cdt-objdump = eoscdt:run_objdump
    cdt-readobj = eoscdt:run_readobj
    cdt-readelf = eoscdt:run_readelf
    cdt-strip = eoscdt:run_strip
    cdt-wast2wasm = eoscdt:run_wast2wasm
    cdt-wasm2wast = eoscdt:run_wasm2wast
    eoscdt = eoscdt:run_eos_cdt
    cdt-get-dir = eoscdt:run_eos_cdt_get_dir
    cdt-get-root-dir = eoscdt:run_eos_cdt_get_root_dir
